--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -55,16 +55,36 @@
         <artifactId>log4j-api</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api-test</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <!-- Plugins -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-plugins</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-plugin-processor</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-plugins-test</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <!-- Core Log4j -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core-test</artifactId>
         <version>${project.version}</version>
       </dependency>
       <!--  Commons code for Jackson-based layouts -->
@@ -119,6 +139,17 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-jdbc-dbcp2</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <!-- JNDI -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-jndi</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-jndi-test</artifactId>
         <version>${project.version}</version>
       </dependency>
       <!-- Apache Flume Bridge -->
