--- a/pom.xml
+++ b/pom.xml
@@ -1077,6 +1077,11 @@
         <version>31.1-jre</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>net.java.dev.jna</groupId>
+        <artifactId>jna</artifactId>
+        <version>4.5.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
