[LOG4J2-2921] Parallel execution for JUnit5 tests
Unit tests in `release-2.x` are executed sequentially in per-test JVMs.
While parallel execution in a single JVM requires a lot of work, this PR
makes a step in this direction: the tests based on JUnit5 in
`log4j-core` (about 50% of the tests) are executed in per-test JVMs, but
in parallel.

This requires only a private/temporary directory for each test to store
its logs (@PrivateDir extension), so that tests using the same file
names don't clash.

As a preliminary step to phase 2 (running multiple JVMs in parallel and
reusing them for multiple tests), this PR also introduces a thread-bound
property source/lookup that can be retrieved with the @TestProperties
annotation (or @SetTestProperty).

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -444,6 +444,30 @@
             <org.apache.activemq.SERIALIZABLE_PACKAGES>*</org.apache.activemq.SERIALIZABLE_PACKAGES>
           </systemPropertyVariables>
         </configuration>
+        <executions>
+            <execution>
+                <id>default-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                   <includeJUnit5Engines>junit-jupiter</includeJUnit5Engines>
+                   <forkCount>1C</forkCount>
+                   <runOrder>random</runOrder>
+                </configuration>
+            </execution>
+            <execution>
+                <id>junit4-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                    <excludeJUnit5Engines>junit-jupiter</excludeJUnit5Engines>
+                </configuration>
+            </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
