take a look failed test

--- a/log4j-1.2-api/src/test/resources/LOG4J2-3326.properties
+++ b/log4j-1.2-api/src/test/resources/LOG4J2-3326.properties
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 
-log4j.appender.CUSTOM=org.apache.log4j.CustomNoopAppender
+log4j.appender.CUSTOM=org.apache.log4j.ListAppender
 log4j.appender.CUSTOM.filter.1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.CUSTOM.filter.1.levelMin=ALL
 log4j.appender.CUSTOM.filter.2=org.apache.log4j.varia.LevelRangeFilter
