brush up failed test

--- a/log4j-1.2-api/src/test/resources/LOG4J2-3326.properties
+++ b/log4j-1.2-api/src/test/resources/LOG4J2-3326.properties
@@ -19,5 +19,8 @@ log4j.appender.CUSTOM=org.apache.log4j.ListAppender
 log4j.appender.CUSTOM.filter.1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.CUSTOM.filter.1.levelMin=ALL
 log4j.appender.CUSTOM.filter.2=org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.CUSTOM.filter.2.levelMin=INFO
+log4j.appender.CUSTOM.filter.2.levelMax=ERROR
+log4j.appender.CUSTOM.filter.3=org.apache.log4j.varia.LevelRangeFilter
 
 log4j.rootLogger=trace, CUSTOM
