--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,7 @@
     <spring-boot.version>2.6.7</spring-boot.version>
     <springVersion>5.3.20</springVersion>
     <kubernetes-client.version>5.12.2</kubernetes-client.version>
-    <flumeVersion>1.9.0</flumeVersion>
+    <flumeVersion>1.10.0</flumeVersion>
     <disruptorVersion>3.4.4</disruptorVersion>
     <conversantDisruptorVersion>1.2.15</conversantDisruptorVersion> <!-- Version 1.2.16 requires Java 9 -->
     <elastic.version>7.17.4</elastic.version>
@@ -309,6 +309,7 @@
     <module.name />
     <!-- Used in `log4j-appserver`, so that it does not override `wiremock`'s deps-->
     <jetty.version>9.4.46.v20220331</jetty.version>
+    <netty-all.version>4.1.72.Final</netty-all.version>
   </properties>
   <pluginRepositories>
     <pluginRepository>
@@ -1080,6 +1081,12 @@
         <groupId>net.java.dev.jna</groupId>
         <artifactId>jna</artifactId>
         <version>4.5.2</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>${netty-all.version}</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
