--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
         shell: bash
         run: |
           ./mvnw \
-            --show-version --batch-mode --errors --no-transfer-progress \
+            --show-version --batch-mode --errors --no-transfer-progress --fail-at-end \
             -DtrimStackTrace=false \
             -Dsurefire.rerunFailingTestsCount=2 \
             -Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000 \
@@ -78,7 +78,7 @@ jobs:
         shell: bash
         run: |
           ./mvnw \
-            --show-version --batch-mode --errors --no-transfer-progress \
+            --show-version --batch-mode --errors --no-transfer-progress --fail-at-end \
             --non-recursive \
             -Dmaven.doap.skip \
             -DskipTests \
