--- a/pom.xml
+++ b/pom.xml
@@ -266,7 +266,8 @@
     <checkstyle.tool.version>8.45.1</checkstyle.tool.version>
     <deploy.plugin.version>2.8.2</deploy.plugin.version>
     <rat.plugin.version>0.13</rat.plugin.version>
-    <pdf.plugin.version>1.5.1</pdf.plugin.version>
+    <!-- Do not update the pdf plugin version without verifying the new version works by running mvn site -->
+    <pdf.plugin.version>1.2</pdf.plugin.version>
     <cobertura.plugin.version>2.7</cobertura.plugin.version>
     <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
     <release.plugin.version>2.5.3</release.plugin.version>
