--- a/log4j-perf/pom.xml
+++ b/log4j-perf/pom.xml
@@ -130,8 +130,8 @@
       <version>1.0.2</version>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.persistence</groupId>
-      <artifactId>javax.persistence</artifactId>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
     </dependency>
     <!-- JPA Tests -->
     <dependency>
