--- a/log4j-1.2-api/pom.xml
+++ b/log4j-1.2-api/pom.xml
@@ -85,9 +85,8 @@
     </dependency>
     <!-- Used for JMS appenders (needs an implementation of course) -->
     <dependency>
-      <groupId>org.jboss.spec.javax.jms</groupId>
-      <artifactId>jboss-jms-api_1.1_spec</artifactId>
-      <scope>provided</scope>
+      <groupId>javax.jms</groupId>
+      <artifactId>javax.jms-api</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -145,7 +144,7 @@
             <Fragment-Host>org.apache.logging.log4j.core</Fragment-Host>
             <Export-Package>org.apache.log4j.*</Export-Package>
             <Import-Package>
-              javax.jms;version="[1.1,2)";resolution:=optional,
+              javax.jms;version="[1.1,3)";resolution:=optional,
               <!-- used by org.apache.log4j.jmx.Agent -->
               com.sun.jdmk.comm;resolution:=optional,
               *
