--- a/log4j-web/pom.xml
+++ b/log4j-web/pom.xml
@@ -49,8 +49,6 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>3.0.1</version>
-      <scope>provided</scope>
     </dependency>
 
     <!-- Test dependencies -->
@@ -93,7 +91,11 @@
           <instructions>
             <!-- we compile against 3.0, but require 2.5 minimum -->
             <Fragment-Host>org.apache.logging.log4j.core</Fragment-Host>
-            <Import-Package>javax.servlet;version="[2.5,4)",*</Import-Package>
+	    <Import-Package>
+	      javax.servlet;version="[2.5,5)",
+	      javax.servlet.http;version="[2.5,5)",
+	      *
+	    </Import-Package>
             <Export-Package>org.apache.logging.log4j.web</Export-Package>
           </instructions>
         </configuration>
