--- a/pom.xml
+++ b/pom.xml
@@ -291,7 +291,6 @@
     <docLabel>Site Documentation</docLabel>
     <projectDir />
     <commonsLoggingVersion>1.2</commonsLoggingVersion>
-    <javax.persistence>2.2.1</javax.persistence>
     <!-- The OSGi API version MUST always be the MINIMUM version Log4j supports -->
     <osgi.api.version>6.0.0</osgi.api.version>
     <activemq.version>5.17.1</activemq.version>
@@ -301,8 +300,14 @@
     <junitPioneerVersion>1.6.2</junitPioneerVersion>
     <mockitoVersion>4.4.0</mockitoVersion>
     <xmlunitVersion>2.9.0</xmlunitVersion>
+    <!-- Java EE 8 artifacts -->
     <javax.activation.version>1.2.0</javax.activation.version>
+    <javax.jms.version>2.0.1</javax.jms.version>
+    <javax.jsp.version>2.3.3</javax.jsp.version>
     <javax.mail.version>1.6.2</javax.mail.version>
+    <javax.persistence.version>2.2</javax.persistence.version>
+    <javax.servlet.version>4.0.1</javax.servlet.version>
+    <!-- Jakarta EE 9 artifacts -->
     <jakarta.activation.version>2.0.1</jakarta.activation.version>
     <jakarta.mail.version>2.0.1</jakarta.mail.version>
     <argLine>-Xms256m -Xmx1024m</argLine>
@@ -703,14 +708,40 @@
       </dependency>
       <!-- Jackson 2 end -->
       <dependency>
-        <groupId>javax.mail</groupId>
-        <artifactId>javax.mail-api</artifactId>
-        <version>${javax.mail.version}</version>
-      </dependency>
-      <dependency>
         <groupId>javax.activation</groupId>
         <artifactId>javax.activation-api</artifactId>
         <version>${javax.activation.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.jms</groupId>
+        <artifactId>javax.jms-api</artifactId>
+        <version>${javax.jms.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet.jsp</groupId>
+        <artifactId>javax.servlet.jsp-api</artifactId>
+        <version>${javax.jsp.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>javax.mail-api</artifactId>
+        <version>${javax.mail.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>javax.persistence-api</artifactId>
+        <version>${javax.persistence.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${javax.servlet.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>com.sun.mail</groupId>
@@ -719,14 +750,16 @@
         <scope>runtime</scope>
       </dependency>
       <dependency>
-        <groupId>jakarta.mail</groupId>
-        <artifactId>jakarta.mail-api</artifactId>
-        <version>${jakarta.mail.version}</version>
-      </dependency>
-      <dependency>
         <groupId>jakarta.activation</groupId>
         <artifactId>jakarta.activation-api</artifactId>
         <version>${jakarta.activation.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.mail</groupId>
+        <artifactId>jakarta.mail-api</artifactId>
+        <version>${jakarta.mail.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>com.sun.mail</groupId>
@@ -739,12 +772,6 @@
         <artifactId>jakarta.activation</artifactId>
         <version>${jakarta.activation.version}</version>
         <scope>runtime</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.spec.javax.jms</groupId>
-        <artifactId>jboss-jms-api_1.1_spec</artifactId>
-        <version>1.0.1.Final</version>
-        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
@@ -760,12 +787,6 @@
         <groupId>org.zeromq</groupId>
         <artifactId>jeromq</artifactId>
         <version>0.5.2</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.5</version>
-        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>com.lmax</groupId>
@@ -947,12 +968,6 @@
         <groupId>org.eclipse.persistence</groupId>
         <artifactId>org.eclipse.persistence.jpa</artifactId>
         <version>2.7.10</version>
-      </dependency>
-      <dependency>
-        <groupId>org.eclipse.persistence</groupId>
-        <artifactId>javax.persistence</artifactId>
-        <version>${javax.persistence}</version>
-        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.lightcouch</groupId>
