--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.17.3-SNAPSHOT</version>
+    <version>2.18.0</version>
   </parent>
   <artifactId>log4j-api</artifactId>
   <packaging>jar</packaging>
@@ -283,7 +283,7 @@
                 <Bundle-SymbolicName>${maven-symbolicname}.tests</Bundle-SymbolicName>
                 <Fragment-Host>org.apache.logging.log4j.api</Fragment-Host>
                 <Export-Package>org.apache.logging.log4j.*</Export-Package>
-                <Import-Package></Import-Package>
+                <Import-Package />
               </instructions>
             </configuration>
           </execution>
