--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -26,7 +26,7 @@
   <description>Apache Log4j Bill of Materials</description>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-bom</artifactId>
-  <version>2.17.3-SNAPSHOT</version>
+  <version>2.18.0</version>
   <packaging>pom</packaging>
 
   <!-- `log4j-bom` doesn't inherit from the room POM, but `org.apache.logging:logging-parent`.
@@ -226,4 +226,8 @@
       </plugin>
     </plugins>
   </build>
+
+  <scm>
+    <tag>log4j-2.18.0-rc1</tag>
+  </scm>
 </project>
