--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-application/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-application/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.logging.log4j.samples</groupId>
     <artifactId>log4j-spring-cloud-config-samples</artifactId>
-    <version>2.17.3-SNAPSHOT</version>
+    <version>2.18.0</version>
   </parent>
 
   <artifactId>sample-app</artifactId>
