[LOG4J2-3546] Fix SLF4J and JUL implementation in OSGi environment
Tests `log4j-to-jul` and `log4j-to-slf4j` in an OSGI environment.

Newer tests in `log4j-osgi` are written using PAX Exam in order to
provide better OSGI testing.

--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -298,6 +298,12 @@
         <artifactId>log4j-taglib</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <!-- Log4j-to-JUL bridge -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-to-jul</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <!-- SLF4J Adapter -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
