--- a/log4j-to-jul/pom.xml
+++ b/log4j-to-jul/pom.xml
@@ -41,6 +41,10 @@
       <artifactId>log4j-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava-testlib</artifactId>
       <scope>test</scope>
@@ -81,13 +85,8 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
+            <Bundle-Activator>org.apache.logging.log4j.tojul.Activator</Bundle-Activator>
             <Export-Package>org.apache.logging.log4j.tojul</Export-Package>
-            <Require-Capability>
-              osgi.extender;filter:="(osgi.extender=osgi.serviceloader.registrar)"
-            </Require-Capability>
-            <Provide-Capability>
-              osgi.serviceloader;osgi.serviceloader=org.apache.logging.log4j.spi.Provider
-            </Provide-Capability>
           </instructions>
         </configuration>
       </plugin>
