--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,7 @@
     <xmlunitVersion>2.9.0</xmlunitVersion>
     <!-- Java EE 8 artifacts -->
     <javax.activation.version>1.2.0</javax.activation.version>
+    <javax.inject.version>1</javax.inject.version>
     <javax.jms.version>2.0.1</javax.jms.version>
     <javax.jsp.version>2.3.3</javax.jsp.version>
     <javax.mail.version>1.6.2</javax.mail.version>
@@ -333,6 +334,13 @@
   </pluginRepositories>
   <dependencyManagement>
     <dependencies>
+      <dependency>
+	<groupId>org.apache.logging.log4j</groupId>
+	<artifactId>log4j-bom</artifactId>
+	<version>${project.version}</version>
+	<type>pom</type>
+	<scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
@@ -465,6 +473,16 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-jcl</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-to-jul</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-to-slf4j</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -711,6 +729,12 @@
         <groupId>javax.activation</groupId>
         <artifactId>javax.activation-api</artifactId>
         <version>${javax.activation.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>${javax.inject.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
