(doc) Fix typos in project documentations
Fix typos in project changelog and site.

--- a/src/site/custom/project-info-report.properties
+++ b/src/site/custom/project-info-report.properties
@@ -99,7 +99,7 @@ report.dependencies.transitive.nolist                              = No transiti
 report.dependencies.transitive.title                               = Project Transitive Dependencies
 report.dependency-convergence.convergence.caption                  = Dependencies used in modules
 report.dependency-convergence.convergence.single.caption           = Dependencies used in this project
-report.dependency-convergence.description                          = This document presents the convergence of dependency versions across the entire project, and its sub modules.
+report.dependency-convergence.description                          = This document presents the convergence of dependency versions across the entire project, and its submodules.
 report.dependency-convergence.legend                               = Legend:
 report.dependency-convergence.legend.different                     = At least one dependency has a differing version of the dependency or has SNAPSHOT dependencies.
 report.dependency-convergence.legend.shared                        = All modules/dependencies share one version of the dependency.
@@ -121,7 +121,7 @@ report.dependency-convergence.stats.modules                        = Number of m
 report.dependency-convergence.title                                = Dependency Convergence
 report.dependency-info.name                                        = Dependency Information
 report.dependency-info.title                                       = Dependency Information
-report.dependency-info.description                                 = This document describes how to to include this project as a dependency using various dependency management tools.
+report.dependency-info.description                                 = This document describes how to include this project as a dependency using various dependency management tools.
 report.index.nodescription                                         = There is currently no description associated with this project.
 report.index.title                                                 = About
 report.issuetracking.bugzilla.intro                                = This project uses {Bugzilla, http://www.bugzilla.org/}.
@@ -186,7 +186,7 @@ report.mailing-lists.intro                                         = We welcome 
 report.mailing-lists.name                                          = Mailing Lists
 report.mailing-lists.nolist                                        = There are no mailing lists currently associated with this project.
 report.mailing-lists.title                                         = Project Mailing Lists
-report.scm.accessbehindfirewall.cvs.intro                          = For those developers who are stuck behind a corporate firewall, {CVSGrab, http://cvsgrab.sourceforge.net/} can use the viewcvs web interface to checkout the source code.
+report.scm.accessbehindfirewall.cvs.intro                          = For those developers who are stuck behind a corporate firewall, {CVSGrab, http://cvsgrab.sourceforge.net/} can use the viewcvs web interface to check out the source code.
 report.scm.accessbehindfirewall.general.intro                      = Refer to the documentation of the SCM used for more information about access behind a firewall.
 report.scm.accessbehindfirewall.svn.intro                          = For those users who are stuck behind a corporate firewall which is blocking HTTP access to the Subversion repository, you can try to access it via the developer connection:
 report.scm.accessbehindfirewall.title                              = Access from Behind a Firewall
@@ -210,10 +210,10 @@ report.scm.devaccess.git.intro                                     = Only projec
 report.scm.devaccess.hg.intro                                      = Only project developers can access the Mercurial tree via this method (See {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.devaccess.perforce.intro                                = Only project developers can access the Perforce tree via this method. Substitute username and password with the proper values.
 report.scm.devaccess.starteam.intro                                = Only project developers can access the Starteam tree via this method. Substitute username with the proper value.
-report.scm.devaccess.svn.intro1.https                              = Everyone can access the Subversion repository via HTTP, but committers must checkout the Subversion repository via HTTPS.
-report.scm.devaccess.svn.intro1.other                              = Committers must checkout the Subversion repository.
-report.scm.devaccess.svn.intro1.svn                                = Committers must checkout the Subversion repository via SVN.
-report.scm.devaccess.svn.intro1.svnssh                             = Committers must checkout the Subversion repository via SVN+SSH.
+report.scm.devaccess.svn.intro1.https                              = Everyone can access the Subversion repository via HTTP, but committers must check out the Subversion repository via HTTPS.
+report.scm.devaccess.svn.intro1.other                              = Committers must check out the Subversion repository.
+report.scm.devaccess.svn.intro1.svn                                = Committers must check out the Subversion repository via SVN.
+report.scm.devaccess.svn.intro1.svnssh                             = Committers must check out the Subversion repository via SVN+SSH.
 report.scm.devaccess.svn.intro2                                    = To commit changes to the repository, execute the following command to commit your changes (svn will prompt you for your password):
 report.scm.devaccess.title                                         = Developer Access
 report.scm.general.intro                                           = This project uses a Source Content Management System to manage its source code.
@@ -276,7 +276,7 @@ report.team-list.developers.timezone                               = Time Zone
 report.team-list.developers.title                                  = Members
 report.team-list.developers.url                                    = URL
 report.team-list.intro.description1                                = A successful project requires many people to play many roles. Some members write code or documentation, while others are valuable as testers, submitting patches and suggestions.
-report.team-list.intro.description2                                = The team is comprised of Members and Contributors. Members have direct access to the source of a project and actively evolve the code-base. Contributors improve the project through submission of patches and suggestions to the Members. The number of Contributors to the project is unbounded. Get involved today. All contributions to the project are greatly appreciated.
+report.team-list.intro.description2                                = The team consists of Members and Contributors. Members have direct access to the source of a project and actively evolve the code-base. Contributors improve the project through submission of patches and suggestions to the Members. The number of Contributors to the project is unbounded. Get involved today. All contributions to the project are greatly appreciated.
 report.team-list.intro.title                                       = The Team
 report.team-list.name                                              = Project Team
 report.team-list.nocontributor                                     = There are no contributors listed for this project. Please check back again later.
@@ -309,13 +309,13 @@ report.plugins.nolist                                              = There are n
 report.plugins.report.nolist                                       = There are no plugins reports defined in the Reporting part of this project.
 report.modules.nolist                                              = There are no modules declared in this project.
 report.modules.name                                                = Project Modules
-report.modules.description                                         = This document lists the modules (sub-projects) of this project.
+report.modules.description                                         = This document lists the modules (subprojects) of this project.
 report.modules.title                                               = Project Modules
 report.modules.intro                                               = This project has declared the following modules:
 report.modules.header.name                                         = Name
 report.modules.header.description                                  = Description
 report.distributionManagement.name                                 = Distribution Management
-report.distributionManagement.description                          = This document provides informations on the distribution management of this project.
+report.distributionManagement.description                          = This document provides information on the distribution management of this project.
 report.distributionManagement.title                                = Project Distribution Management
 report.distributionManagement.nodistributionmanagement             = No distribution management is defined for this project.
 report.distributionManagement.overview.title                       = Overview
