--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
       <name>Piotr P. Karwasz</name>
       <email>pkarwasz@apache.org</email>
       <roles>
-	<role>Committer</role>
+	<role>PMC Member</role>
       </roles>
       <timezone>Europe/Warsaw</timezone>
     </developer>
