--- a/log4j-slf4j20-impl/pom.xml
+++ b/log4j-slf4j20-impl/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.17.3-SNAPSHOT</version>
+    <version>2.18.1-SNAPSHOT</version>
   </parent>
   <artifactId>log4j-slf4j20-impl</artifactId>
   <packaging>jar</packaging>
@@ -29,8 +29,8 @@
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>SLF4J Documentation</docLabel>
-    <projectDir>/slf4j18</projectDir>
-    <slf4j.version>2.0.0-alpha5</slf4j.version>
+    <projectDir>/slf4j20</projectDir>
+    <slf4j.version>2.0.0</slf4j.version>
     <module.name>org.apache.logging.log4j.slf4j</module.name>
     <maven.doap.skip>true</maven.doap.skip>
   </properties>
