--- a/log4j-slf4j20-impl/pom.xml
+++ b/log4j-slf4j20-impl/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <scope>runtime</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
@@ -131,6 +131,7 @@
               <includes>
                 <include>**/OverflowTest.java</include>
               </includes>
+              <includeJUnit5Engines>junit-vintage</includeJUnit5Engines>
             </configuration>
           </execution>
           <execution>
