--- a/log4j-slf4j2-impl/pom.xml
+++ b/log4j-slf4j2-impl/pom.xml
@@ -22,14 +22,14 @@
     <artifactId>log4j</artifactId>
     <version>3.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>log4j-slf4j20-impl</artifactId>
+  <artifactId>log4j-slf4j2-impl</artifactId>
   <packaging>jar</packaging>
-  <name>Apache Log4j SLF4J 2.0+ Binding</name>
+  <name>Apache Log4j SLF4J 2.0 Binding</name>
   <description>The Apache Log4j SLF4J 2.0 API binding to Log4j 2 Core</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>SLF4J Documentation</docLabel>
-    <projectDir>/slf4j20</projectDir>
+    <projectDir>/slf4j2-impl</projectDir>
     <slf4j.version>2.0.0</slf4j.version>
     <module.name>org.apache.logging.log4j.slf4j</module.name>
     <maven.doap.skip>true</maven.doap.skip>
