--- a/pom.xml
+++ b/pom.xml
@@ -467,6 +467,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j2-impl</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-jcl</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -1688,7 +1693,7 @@
     <module>log4j-core-its</module>
     <module>log4j-1.2-api</module>
     <module>log4j-slf4j-impl</module>
-    <module>log4j-slf4j20-impl</module>
+    <module>log4j-slf4j2-impl</module>
     <module>log4j-to-slf4j</module>
     <module>log4j-to-jul</module>
     <module>log4j-jcl</module>
