--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -101,6 +101,12 @@
         <artifactId>log4j-slf4j-impl</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <!-- SLF4J 2.0 Compatibility API -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j2-impl</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <!-- SLF4J Adapter -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
